test/error/E14.1.chigfn
{
	"type": "function",
	"name": "helloworld",
	"inputs": [],
	"outputs": [],
	"nodes": {
		"if": {
			"type": "lang:if",
			"data": {},
			"location": [2, 2]
		}
	},
	"connections": [
		{
		}
	]
}
